# Algebraic-differentiators

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST  README.md  algebraicDifferentiator.py  pyproject.toml  readme.rst  readthedocs.yml  requirements.txt  setup.py
AlgDiff/: __init__.py  algebraicDifferentiator.py
DataForGUI/: testData.csv
data/: filterSpectrum.eps  motivationAlgDiff.eps
docs/: requirements.txt
docs/source/: conf.py  contact.rst  documentation.rst  gui.rst  index.rst  license.rst  motivation.rst  onAlgebraicDiff.rst  references.rst  troubleshooting.rst  usage.rst
documentation/: .conf.py.swp  conf.py  index.rst
documentation/_build/doctrees/: environment.pickle  index.doctree
documentation/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
documentation/_build/html/.ipynb_checkpoints/: index-checkpoint.html
examples/: DetailedExample.mlx  DetailedExamples.html  DetailedExamples.ipynb  DetailedExamples.mlx  EliminationDisturbancesExample.html  EliminationDisturbancesExample.ipynb  QuickStart.html  QuickStart.ipynb  QuickStart.mlx  bibfile.bib
examples-AT-paper/: DetailedExamples.ipynb
examples-AT-paper/.ipynb_checkpoints/: DetailedExamples-checkpoint.ipynb
examples/.ipynb_checkpoints/: DetailedExamples-checkpoint.ipynb  EliminationDisturbancesExample-checkpoint.ipynb
examples_c_code/: README.md  export2c.ipynb  makefile  result.txt  signal.txt  test_c_code.py
examples_c_code/includes/: functions_algdiff.h  g0.h
examples_c_code/src/: functions_algdiff.c  main.c
matlab/: DetailedExamples.mlx  QuickStart.mlx  Readme.md
matlab/@AlgDiff/: AlgDiff.m  install.m
(+1 files in other folders)
