[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AlgDiff"
version = "2.4"
authors = [
  { name="Amine Othmane", email="amine.othmane@uni-saarland.de" },
]
description = "AlgDiff is a Python class implementing all necessary tools for the design, analysis, and discretization of algebraic differentiators. An interface to Matlab is also provided."
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = ['scipy', 'mpmath', 'numpy']
license = {file = "LICENSE"}
keywords = ['numerical-differentiation ', 'fir-filters', 'orthogonal-polynomials', 'numerical-methods ']


[project.urls]
"Homepage" = "https://github.com/aothmane-control/Algebraic-differentiators/tree/master"

